# oz-co-project-3_backend

./: .dockerignore  .env  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.prod  README.md  aerich.ini  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  deploy.yml
app/: main.py
app/core/: config.py  redis.py  settings.py  token.py
app/exceptions/: applicant_exceptions.py  auth_exceptions.py  base_exceptions.py  chatbot_exceptions.py  comment_exceptions.py  email_exceptions.py  free_board_exceptions.py  job_posting_exceptions.py  request_exceptions.py  resume_exceptions.py  search_exceptions.py  server_exceptions.py  social_login_exceptions.py  success_review_exceptions.py  user_exceptions.py
app/models/: base_user_models.py  chatbot.py  comment_models.py  corporate_user_models.py  free_board_models.py  job_posting_model.py  job_posting_models.py  resume_models.py  seeker_user_models.py  success_review_models.py  user_ban_models.py  user_models.py
app/resume/: models.py
app/routes/: user_router.py
app/schemas/: admin_schmeas.py  freeboard_schemas.py  jobposting_schemas.py  jobs_schemas.py  success_review_schemas.py  user_schema.py
app/services/: admin_services.py  auth_services.py  chatbot_services.py  comment_services.py  email_services.py  freeboard_services.py  jobposting_services.py  jobs_services.py  postings_services.py  public_collection.py  success_review_services.py  user_register_services.py  user_service.py
app/test/: jobposting_test.py
app/tests/: admin_test.py  chatbot_test.py  comment_test.py  conftest.py  free_board_test.py
app/utils/: auth.py  cookies.py  exception.py  model.py  pagination.py  s3_upload.py
migrations/models/: 0_20250409093306_init.py  0_20250411071546_init.py  0_20250414155447_init.py  0_20250429054409_init.py  0_20250501161019_init.py  1_20250411155350_update.py  1_20250413070513_update.py  1_20250414160144_update.py  2_20250410082139_update.py  2_20250413151345_update.py  2_20250414160436_update.py  3_20250409092523_None.py  (+11 more)
nginx/: nginx.conf
scripts/: migrate_dev.sh  migrate_prod.sh
(+144 files in other folders)
