[project]
name = "co-pj-senior"
version = "0.1.0"
description = ""
authors = [
    {name = "hak2881",email = "gkr054@naver.com"}
]
#readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "tortoise-orm (>=0.24.2,<0.25.0)",
    "aerich (>=0.8.2,<0.9.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.aerich]
tortoise_orm = "app.core.config.TORTOISE_ORM"
location = "./migrations"
